k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-s3-manager-service
  namespace: aws-s3-manager
  labels:
    app: aws-s3-manager
    component: frontend
spec:
  selector:
    app: aws-s3-manager
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
      nodePort: 30080
  type: NodePort
